--- a/css/style.css
+++ b/css/style.css
@@ -145,19 +145,19 @@ main {
 #row2 {
     
     padding-top: 45px;
-    background: url(../images/coffee1.jpg);
+    background: url(/images/coffee1.jpg);
     background-size: cover;
 }
 
 #row3 {
     padding-top: 45px;
-    background: url(../images/coffee2.jpg);
+    background: url(/images/coffee2.jpg);
     background-size: cover;
 }
 
 #row4 {
     padding-top: 45px;
-    background: url(../images/coffee3.jpg);
+    background: url(/images/coffee3.jpg);
     background-size: cover;
 }
 
@@ -166,7 +166,7 @@ main {
     justify-content: center;
     align-items: center;
     padding-top: 45px;
-    background: url(../images/coffee4.jpg);
+    background: url(/images/coffee4.jpg);
     background-size:cover;
 }
 
