--- a/css/style.css
+++ b/css/style.css
@@ -103,8 +103,9 @@ main {
     display: flex;
     margin: 0px;
     height: 100svh;
-    width: 100%;
+    width: 100vw;
     padding: 0;
+    background-position: center;
 }
 
 .rows .nextpic {
