--- a/css/style.css
+++ b/css/style.css
@@ -2,14 +2,12 @@
 * {
     box-sizing: border-box;
     scroll-behavior: smooth;
-    scroll-snap-type: y mandatory;
 }
 
 body {
     margin: 0px;
     font-family: alice;
 }
-
 
 
 
@@ -35,17 +33,22 @@ header {
     background-color: rgba(255, 255, 255, 0.9);
     /* background-color: rgba(96, 37, 2, 0.5); */
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+    z-index: 3;
 }
 
 header nav {
     position: fixed;
-    top: 2px;
+    top: 20px;
     right:0;
     width: 100%;
     text-align: right;
 }
 
+header nav label i{
+    position: fixed;
+    top: 20px;
+    right: 10px;
+}
 header nav ul {
     list-style: none;
     margin: 0 15px;
@@ -77,7 +80,9 @@ header #logo img {
 
 #logo {
     position: fixed;
+    top: 13px;
     width: 100px;
+    left: -5px;
     z-index:2;
 }
 
@@ -90,180 +95,6 @@ main {
     flex-wrap: wrap;
 }
 
-#herologo {
-    width: 67%;
-    position: absolute;
-}
-#brewtext {
-    font-weight: normal;
-    font-size: 20px;
-}
-/* ROWS STYLES */
-.rows {
-    scroll-snap-align: start;
-    position: relative;
-    display: flex;
-    margin: 0px;
-    height: 100svh;
-    width: 100vw;
-    padding: 0;
-    background-position: center;
-}
-
-.rows .nextpic {
-    height: 35px;
-}
-#row1 a, 
-#row2 a, 
-#row3 a, 
-#row4 a, 
-#row5 a {
-    text-decoration: none;
-    color: #b6eff0;
-}
-
-#row1 {
-    justify-content: center;
-    align-items: center;
-}
-
-#row1 video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-}
-
-#brewbutton {
-    margin-top: 40vh;
-    background-color: #863000;
-    padding: 0 100px;
-    border-radius: 30px;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.6);
-}
-
-#row2 {
-    
-    padding-top: 45px;
-    background: url(../images/coffee1.jpg);
-    background-size: cover;
-}
-
-#row3 {
-    padding-top: 45px;
-    background: url(../images/coffee2.jpg);
-    background-size: cover;
-}
-
-#row4 {
-    padding-top: 45px;
-    background: url(../images/coffee3.jpg);
-    background-size: cover;
-}
-
-#row5 {
-    height: calc(100svh - 35px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 45px;
-    background: url(../images/coffee4.jpg);
-    background-size:cover;
-}
-
-#row5 video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-}
-
-.previewtext {
-    margin-top: 30px;
-    position: absolute;
-    left: 65px;
-    background-color: rgba(255, 255, 255, 0.4);
-    border-radius: 10px;
-    width: 450px;
-    padding: 15px;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-}
-
-.previewtext2 {
-    margin-top: 30px;
-    position: absolute;
-    right: 65px;
-    background-color: rgba(255, 255, 255, 0.4);
-    border-radius: 10px;
-    width: 450px;
-    padding: 15px;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-}
-
-.previewtext p, .previewtext2 p {
-    text-align: justify;
-}
-
-.previewtext h1, .previewtext2 h1 {
-    font-family: Libre Baskerville;
-}
-.gonextbutton {
-    position: absolute;
-    bottom: 50px;
-    right: 50px;
-    background-color: #863000;
-    padding: 10px 10px 10px 12px;
-    border-radius: 40px;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-}
-
-
-#signup {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 9px;
-    position: relative;
-    height: 260px;
-    width: 530px;
-    padding: 15px;
-    background-color: rgba(200, 200, 200, 1);
-    border-radius: 20px;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
-}
-
-#signup input {
-    height: 28px;
-    margin-top: 9px;
-    margin-bottom: 5px;
-    width: 67%;
-    background-color: rgba(255, 255, 255, 0.2);
-    border: 1px solid rgba(0, 0, 0, 0.3);
-}
-
-#signup h1 {
-    margin: 0;
-    padding: 0;
-    font-size: 48px;
-}
-
-#signupbutton {
-    background-color: #863000;
-    padding: 12px 30px;
-    border-radius: 30px;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.6);
-}
-
-#signupbutton h3 {
-    padding: 0;
-    margin: 0;
-}
 /* FOOTER */
 footer {
     display: flex;
@@ -316,6 +147,45 @@ footer h4 {
 @media only screen and (max-width: 600px) {
     #navmenu {
         display:none;
+    }
+
+    .menu-icon {
+        visibility: visible;
+        position: fixed;
+        right: 10px;
+        top: 12px;
+    }
+    
+    .mobile-menu:checked + #navmenu {
+        display: block;
+        position: fixed;
+        right: 0;
+        top: 34px;
+        margin: 11px auto;
+        background-color: rgba(255, 255, 255, 0.4);
+        display: flex;
+        flex-direction: column;
+        height: 150px;
+        padding: 10px 10px;
+	    width: 100%;
+        align-items: center;
+        box-shadow: 0 2px 4px rgba(0,0,0,0.8);
+    }
+
+    .mobile {
+        display:block;
+    }
+
+}
+
+@media only screen and (max-width: 520px) {
+    #navmenu {
+        display:none;
+    }
+
+    .previewtext,
+    .previewtext2 {
+        width: 80%;
     }
 
     .menu-icon {
