--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@ footer {
     width: 100%;
     background-color: rgb(96, 37, 0);
     height: 35px;
+    z-index: 1;
 }
 
 footer ul {
@@ -162,7 +163,7 @@ footer h4 {
         right: 0;
         top: 34px;
         margin: 11px auto;
-        background-color: rgba(255, 255, 255, 0.4);
+        background-color: rgba(255, 255, 255, 0.8);
         display: flex;
         flex-direction: column;
         height: 150px;
@@ -176,6 +177,14 @@ footer h4 {
         display:block;
     }
 
+    /* #row1,
+    #row2,
+    #row3,
+    #row4,
+    #row5 {
+        background-color: antiquewhite;
+    } */
+
 }
 
 @media only screen and (max-width: 520px) {
@@ -183,6 +192,9 @@ footer h4 {
         display:none;
     }
 
+    header nav label i {
+        right: 10vw;
+    }
     .previewtext,
     .previewtext2 {
         width: 80%;
@@ -201,7 +213,7 @@ footer h4 {
         right: 0;
         top: 34px;
         margin: 11px auto;
-        background-color: rgba(255, 255, 255, 0.4);
+        background-color: rgba(255, 255, 255, 0.8);
         display: flex;
         flex-direction: column;
         height: 150px;
