--- a/css/style.css
+++ b/css/style.css
@@ -80,10 +80,39 @@ header #logo img {
 
 #logo {
     position: fixed;
-    top: 13px;
+    top: 9px;
     width: 100px;
-    left: -5px;
+    left: -1px;
     z-index:2;
+}
+
+#recipesubmenu {
+    display: none;
+    padding: 0;
+    margin: 0;
+    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+}
+
+#recipesubmenulist {
+    text-decoration: none;
+    margin: 0;
+    padding: 5px;
+}
+
+#recipesubmenulist li {
+    margin: 0;
+    margin-bottom: 6px;
+    padding: 0;
+}
+
+#recipesubmenu:hover {
+    display: flex;
+    flex-wrap: wrap;
+    width: 105px;
+    position: fixed;
+    background-color: rgba(200, 200, 200, 0.8);
+    right: 120px;
+    text-align: left;
 }
 
 /* MAIN */
