--- a/css/recipepagestyling.css
+++ b/css/recipepagestyling.css
@@ -28,6 +28,16 @@ main {
     background-size: cover;
 }
 
+#card1 {
+    left: 10px;
+}
+#card2 {
+    left: calc(10px + 34.33vw );
+}
+#card3 {
+    right: 10px;
+}
+
 .content {
     width: 100vw;
 }
@@ -46,18 +56,27 @@ main {
     background-color: bisque;
 }
 
-.cards:hover {
+.cards:not(.focused):hover {
     top: 80vh;
-    height: calc(100px + 10vh)
+    height: calc(100px + 10vh);
 }
 
+.cards.focused {
+    top: 15vh;
+    height: 50vh;
+    left: 35vw !important;
+    z-index: 2;
+}
 
-#card1 {
-    left: 10px;
+/* should be used pang blur blur effect idk if mugana */
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 1; 
+    display: none; 
 }
-#card2 {
-    left: calc(10px + 34.33vw );
-}
-#card3 {
-    right: 10px;
-}
+
