--- a/css/recipepagestyling.css
+++ b/css/recipepagestyling.css
@@ -35,7 +35,7 @@ main {
     left: calc(10px + 34.33vw );
 }
 #card3 {
-    right: 10px;
+    left: calc(20px + 67.66vw);
 }
 
 .content {
@@ -56,6 +56,10 @@ main {
     background-color: bisque;
 }
 
+.cards h1 {
+    padding: 0;
+    margin: 0;
+}
 .cards:not(.focused):hover {
     top: 80vh;
     height: calc(100px + 10vh);
