--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -178,3 +178,42 @@
     padding: 0;
     margin: 0;
 }
+
+#signupmodal {
+    display: none;
+    text-align: center;
+
+    border-radius: 20px;
+    /* box-shadow: 5px 7px 4px rgba(255, 255, 255, 0.131); */
+}
+#signupmodal h2 {
+    font-size: 30px;
+    padding: 0;
+    margin: 0;
+}
+#signupmodal.shown {
+    padding: 10px;
+    background-color: rgb(218, 182, 92);
+    display: block;
+    position: fixed;
+    width: 20vw;
+    height: 25vh;
+
+    top: 10vh;
+    left: 40vw;
+
+    z-index: 5;
+    cursor: pointer;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8); 
+    z-index: 4; 
+    display: none; 
+    cursor: pointer;
+}
