--- a/css/recipepagestyling.css
+++ b/css/recipepagestyling.css
@@ -22,12 +22,26 @@ main {
     align-items: center;
 }
 
-#row1 {
+.row1 {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    background: url(../images/coffee1.jpg);
+    
+}
+
+#rp1 {
+    background: url(../images/rp1bg.jpg);
+    background-size: cover;
+}
+
+#rp2 {  
+    background: url(../images/coffee2.jpg);
+    background-size: cover;
+}
+
+#rp3 {
+    background: url(../images/coffee3.jpg);
     background-size: cover;
 }
 
@@ -86,6 +100,7 @@ main {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5); 
+    backdrop-filter: blur(10px);
     z-index: 1; 
     display: none; 
 }
